--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.0.5
 bcrypt==3.1.4
 blinker==1.4
 cffi==1.11.5
@@ -11,9 +12,13 @@ Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
+Mako==1.0.7
 MarkupSafe==1.1.0
 Pillow==5.3.0
+psycopg2==2.7.6.1
 pycparser==2.19
+python-dateutil==2.7.5
+python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.2.14
 Werkzeug==0.14.1
